update pacakge with deepin-screenshot built-in

--- a/data/indicator-screenshot.desktop
+++ b/data/indicator-screenshot.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Indicator Screenshot
 GenericName=Indicator Screenshot
 Comment=An indicator for deepin-screenshot
-Icon=/usr/share/indicator-screenshot/icons/indicator-screenshot.png
+Icon=/usr/share/indicator-screenshot/icons/indicator-screenshot.ico
 Exec=indicator-screenshot
 Categories=GNOME;GTK;Application;Utils;
 Hidden=False
